# command-pidog

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  web-server.js
.claude/skills/agent-skill-creator/references/: description-keywords.md  resource-bundling-strategy.md  skill-design-principles.md  tech-stack-pattern.md
.github/skills/pidog-control/: SKILL.md
.github/skills/pidog-control/references/: voice-phrases.md
api/: .env.example  pyproject.toml
api/app/: config.py  main.py
api/app/models/: actions.py  agent.py  camera.py  rgb.py  sensors.py  servos.py  sound.py  status.py
api/app/routers/: actions.py  agent.py  camera.py  logs.py  rgb.py  sensors.py  servos.py  sound.py  status.py
api/app/services/: camera_service.py  head_monitor.py  idle_animator.py  llm_provider.py  log_handler.py  neck_monitor.py  pidog_service.py  safety.py
api/app/skill/: pidog_skill.md
api/app/websocket/: manager.py
api/pidog/: pidog.py
api/pidog_api.egg-info/: SOURCES.txt  requires.txt
api/tests/: conftest.py  test_actions.py  test_agent_vision.py  test_head_monitor.py  test_neck_monitor.py  test_safety.py  test_sensors.py  test_servos.py  test_status.py
config/: https.json
docs/: head-oscillation-detection.md  neck-oscillation-detection.md
voice-commands/: helpers.js  index.html  prompt.js  queue.js
